--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
-    "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "axios": "^1.6.7",
+    "core-js": "^3.36.0",
+    "gsap": "^3.12.5",
+    "jwt-decode": "^3.1.2",
+    "primeicons": "^6.0.1",
+    "primeng": "^16.9.1",
+    "primevue": "^3.48.1",
+    "quill": "^1.3.7",
+    "vue": "^3.4.19",
+    "vue-particles": "^1.0.9",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
